[package]
name = "fractal-renderer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
env_logger = "0.8"
getrandom = "0.2"
line_drawing = "0.8"
log = "0.4"
pixels = "0.4.0"
randomize = "3.0"
winit = "0.25"
winit_input_helper = "0.10"
num-complex = "0.4"
rayon = "1.5.1"
hsl = "0.1.1"
glium = "0.30.0"
